--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>React Static Boilerplate</title>
+    <title>IT&amp;Teges</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:800">
@@ -12,6 +12,11 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="/dist/main.js?a1790f1b6d7e35165721"></script>
+    <script src="/dist/main.820b0b42e7cfa82f40a8.js"></script>
+    <script>
+      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+      ga('create','UA-68989198-8','auto');ga('send','pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
   </body>
 </html>
