--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,17 @@
 
 <body>
   <div id="container"></div>
-  <script src="/dist/main.js?8f4bafd8fd0574e82436"></script>
+  <script src="/dist/main.a36cefb41632c0035641.js"></script>
+    <script>
+      window.ga = function() {
+        ga.q.push(arguments)
+      };
+      ga.q = [];
+      ga.l = +new Date;
+      ga('create', 'UA-68989198-8', 'auto');
+      ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
